--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
-    "vuepress": "^1.9.7"
+    "vuepress": "^1.9.7",
+    "vuepress-plugin-smooth-scroll": "0.0.10"
   },
   "dependencies": {
     "markdown-it": "^13.0.1"
